tests/errors/test-literal-operator-invalid.script

auto d = 3km;

//>2:10: error C79: could not find valid literal operator.
